lost on javacript

--- a/addpot.html
+++ b/addpot.html
@@ -21,9 +21,10 @@
 
     <div class="addpot">
         <h1>Add a new Pothole</h1>
-        <p>To add a new pothole you must <button>Login First</button></p>
-        <button>Add new pothole</button>
+        <p>To add a new pothole you must <button onclick="logIN()">Login First</button></p>
         <p id ="demo"></p>
+        <button>Add new pothole</button>
+        <p id ="dem2"></p>
     </div>
 </body>
 </html>
